@@ -240,11 +240,13 @@
     <File name="./NoGuiDispatchAttribute.cs" subtype="Code" buildaction="Compile" />
     <File name="./wrapper/TreeView.cs" subtype="Code" buildaction="Compile" />
     <File name="./wrapper/pixmaps/missing.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./editor/NonContainerWarningDialog.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gnome-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="glade-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" ExecuteTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../" OutputDirVar="" AssemblyNameVar="">
     <BuildFilesVar Sync="True" Name="libstetic_dll_sources" />
